--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 
 body {
 
-background-color: papayawhip;
+background-color: white;
 
 }
 
@@ -55,27 +55,31 @@ background-color: papayawhip;
     margin-top: 35px;
 }
 
+
+
 .nav-bar {
 
     color: crimson;
-    margin-left: 175px;
+    margin-left: 30px;
     margin-top: 55px;
     text-decoration: none;
     font-weight: bold;
 
-
-
 }
+
+
 
 #shop-link {
 
 color: crimson;
-margin-left: 100px;
+margin-left: 175px;
 margin-top: 55px;
 text-decoration: none;
 font-weight: bold;
 
 }
+
+
 
 #nutrition-link  {
 
@@ -117,5 +121,84 @@ font-weight: bold;
 
 }
 
+/* First Row of animals */
 
+.first-div  {
+
+    display: flex;
+    margin-top: 85px;
+    margin-left: 60px;
+    margin-right: -200px;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 240px;
     
+    
+    
+    }
+
+
+.first-div  > div  {
+
+    display: flex;
+    width: 90px;
+    flex-direction: row;
+    
+ }
+
+
+ /* Middle row of text */
+
+ .second-div  {
+
+    display: flex;
+    flex-direction: row;
+    margin-left: 450px;
+    margin-top: -450px;
+    
+    
+    }
+
+
+.second-div  > div  {
+
+    margin-top: 10px;
+    
+/* Third row of animals */    
+
+}
+
+
+ .third-div  {
+
+    display: flex;
+    flex-direction: row-reverse;
+    margin-top: -350px;
+    margin-left: 850px;
+    margin-right: 150px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+   
+}
+
+
+.third-div  > div  {
+    display: flex;
+    width: 125px;
+    
+}
+
+/* Centering text in paragraphs */
+
+p {
+
+
+    text-align: center;
+}
+
+
+
+
+
+ 
